refactor(phase 15): move ask-builder filtering to repository queries (Phase 15.hardening.3-ask-filter-pushdown) •remove findAll() + in-memory filtering from all FactPackBuilder getRecordsForRequest paths •route MBIE and LAWA state ask filtering through repository query methods •add findForAsk(...) with trend filter to LawaTrendMultiYearRecordRepository •update builder tests to stub query methods instead of findAll() •preserve existing ask behavior while eliminating in-memory scan in the ask pipeline